# chatter

./: main.py  pyproject.toml
src/chatter/: llm.py  settings.py  utils.py
src/chatter/agents/: joker.py  utils.py
src/chatter/tools/: _sitemap.py  how_many_jokes.py
